config/k8s/db.yml
#################################
#        DATABASE SERVICE
#################################
apiVersion: v1
kind: Service
metadata:
  # this is the name we used in our Connection String
  name: db
  labels:
    app: rbus
    tier: database
spec:
  type: LoadBalancer
  ports:
  - port: 1433
    targetPort: 1433
    protocol: TCP
  selector:
    app: rbus
    tier: database


#################################
#        DATABASE WORKLOAD
#################################
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deploy
  labels:
    app: rbus
    tier: database
spec:
  selector:
    matchLabels:
      app: rbus
      tier: database
  replicas: 1
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: rbus
        tier: database
    spec:
      containers:
      - name: worker
        image: microsoft/mssql-server-linux
        volumeMounts:
        - mountPath: "/var/opt/mssql"
          name: mssql-data
      volumes:
        - name: mssql-data
          persistentVolumeClaim:
            claimName: mssql-data
