config/k8s/webspa.yml
#################################
#        UI SERVICE
#################################
---
apiVersion: v1
kind: Service
metadata:
  name: webui-svc
  labels:
    app: rbus
    tier: ui
    service: webspa
spec:
  type: NodePort
  ports:
  - port: 80
    protocol: TCP
  selector:
    app: rbus
    tier: ui
    service: webspa


#################################
#        UI WORKLOAD
#################################
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webui-deploy
  labels:
    app: rbus
    tier: ui
    service: webspa
spec:
  selector:
    matchLabels:
      app: rbus
      tier: ui
      service: webspa
  replicas: 2
  minReadySeconds: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 1
  template:
    metadata:
      labels:
        app: rbus
        tier: ui
        service: webspa
        release: stable
    spec:
      containers:
      - name: worker
        image: nvhoanganh1909/rbus-webspa:dev2
