config/k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dockerdemo-ingress
  annotations:
    kubernetes.io/ingress.class: addon-http-application-routing
spec:
  rules:
    - host: demo.946aef69780f41978646.southeastasia.aksapp.io
      http:
        paths:
          - path: /api
            backend:
              serviceName: webbff-svc
              servicePort: 80
          - path: /
            backend:
              serviceName: webui-svc
              servicePort: 80
